# rust-kpdb

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
data/: db-both.kdbx  db-both.key  db-key-file.kdbx  db-key-file.key  db-password.kdbx  key-binary.key  key-hex.key  key-xml.key
src/: common.rs  lib.rs  utils.rs
src/compression/: gzip.rs  mod.rs
src/crypto/: aes256.rs  mod.rs  random_gen.rs  salsa20.rs  sha256.rs
src/format/: kdb2.rs  kdb2_reader.rs  kdb2_writer.rs  kdb2_xml_reader.rs  kdb2_xml_writer.rs  kf.rs  kf_reader.rs  kf_writer.rs  mod.rs  xml.rs
src/io/: log.rs  log_reader.rs  log_writer.rs  mod.rs
src/types/: association.rs  binaries_map.rs  binary_id.rs  binary_key.rs  binary_value.rs  color.rs  comment.rs  composite_key.rs  compression.rs  custom_data_map.rs  custom_icon_uuid.rs  custom_icons_map.rs  database.rs  db_type.rs  entries_map.rs  entry.rs  entry_state.rs  entry_uuid.rs  error.rs  group.rs  group_uuid.rs  groups_map.rs  header_hash.rs  history_map.rs  icon.rs  key_file.rs  key_file_type.rs  master_cipher.rs  master_iv.rs  master_key.rs  master_seed.rs  meta_data.rs  mod.rs  obfuscation.rs  protected_stream_key.rs  result.rs  stream_cipher.rs  stream_key.rs  stream_start_bytes.rs  string_key.rs  (+8 more)
tests/: integration_test.rs
