[package]
name = "rust-kpdb"
version = "0.4.2"
edition = "2018"
authors = ["Martijn Rijkeboer <mrr@sru-systems.com>"]
license = "MIT/Apache-2.0"
description = "Library for reading/writing KeePass 2 and KeePassX databases."
documentation = "https://docs.sru-systems.com/rust-kpdb/0.4.2/kpdb/"
homepage = "https://github.com/sru-systems/rust-kpdb"
repository = "https://github.com/sru-systems/rust-kpdb"
readme = "README.md"
keywords = ["keepass", "keepassx", "kdbx"]

[lib]
name = "kpdb"

[dependencies]
base64 = "0.21.0"
byteorder = "1.4.3"
chrono = "0.4.23"
flate2 = "1.0.25"
hex = "0.4.3"
rand = { version = "0.8.5", features = ["std"] }
rust-crypto = "0.2.36"
secstr = "0.5.1"
uuid = { version = "1.2.2", features = ["v4"] }
xml-rs = "0.8.4"

[dev-dependencies]
quickcheck = "1.0.3"

