[package]
name = "rust-kpdb"
version = "0.5.0"
edition = "2021"
authors = ["Martijn Rijkeboer <mrr@sru-systems.com>"]
license = "MIT/Apache-2.0"
description = "Library for reading/writing KeePass 2 and KeePassX databases."
documentation = "https://docs.sru-systems.com/rust-kpdb/0.5.0/kpdb/"
homepage = "https://github.com/sru-systems/rust-kpdb"
repository = "https://github.com/sru-systems/rust-kpdb"
readme = "README.md"
keywords = ["keepass", "keepassx", "kdbx"]

[lib]
name = "kpdb"

[dependencies]
base64 = "0.21.2"
byteorder = "1"
chrono = "0.4"
flate2 = "1.0"
hex = "0.4.3"
rand = "0.8.5"
rust-crypto = "0.2"
secstr = "0.5.1"
uuid = { version = "1.4.1", features = ["v4"] }
xml-rs = "0.8"

[dev-dependencies]
quickcheck = "1.0.3"

